--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "glob": "^7.0.3",
+    "hbs": "^4.0.0",
     "http": "0.0.0",
     "jwt-simple": "^0.4.1",
     "moment": "^2.12.0",
@@ -28,5 +29,9 @@
     "path": "^0.12.7",
     "request": "^2.69.0",
     "serve-favicon": "^2.3.0"
+  },
+  "apidoc": {
+    "title": "Custom apiDoc browser title",
+    "url": "https://api.github.com/v1"
   }
 }
