--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.1",
+    "debug": "^2.2.0",
     "express": "^4.13.4",
     "glob": "^7.0.3",
     "hbs": "^4.0.0",
